dave the wave changes

--- a/src/test/resources/propertiesFolder/config.properties
+++ b/src/test/resources/propertiesFolder/config.properties
@@ -1,2 +1,10 @@
+
 browser=chrome
 url=https://www.dickssportinggoods.com/
+
+mainNavOption1=Sneaker Release Calendar
+mainNavOption2=Pickup & Delivery
+mainNavOption3=Services
+
+googleTitle=Shareable Online Calendar
+returnPolicyHeader=DICK'S Sporting Goods Return Policy
