fixing config data

--- a/src/test/resources/propertiesFolder/config.properties
+++ b/src/test/resources/propertiesFolder/config.properties
@@ -15,7 +15,8 @@ mainNavOption3=Services
 googleTitle=Shareable Online Calendar
 returnPolicyHeader=DICK'S Sporting Goods Return Policy
 
-email=paola331arias@gmail.com
-password=1
-
+email=electro1@gmail.com
+password=Lalalala1!
+confirmSignout=Sign In to Earn Points
+confirmationText=Please check the email address electro1@gmail.com for instructions to reset your password.
 
