--- a/src/test/resources/propertiesFolder/config.properties
+++ b/src/test/resources/propertiesFolder/config.properties
@@ -12,3 +12,10 @@ returnPolicyHeader=DICK'S Sporting Goods Return Policy
 email=paola331arias@gmail.com
 password=1
 
+reviewTitle= very comfy
+reviewTextBox= shoe is very comfy, in 35 more characters, it is very very very very comfy
+reviewNicknameInput= John
+reviewLocationInput= Chantilly, VA
+reviewSizePurchasedInput= 6
+reviewWhatCanWeDoToImproveShoeFitInput= you could stack memory foam on top of a feather filled sole 
+
